// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Atoms/Avatar Default 1`] = `
<div
  style={
    Object {
      "alignItems": "flex-start",
      "display": "flex",
      "flexDirection": "column",
      "flexWrap": "wrap",
      "gap": "10px 30px",
      "height": "100%",
      "justifyContent": "flex-start",
      "maxHeight": "auto",
    }
  }
>
  <div
    className="avatar"
  >
    <picture
      className="picture is-rounded"
    >
      <img
        src="https://placeimg.com/200/200/any"
        style={
          Object {
            "height": 44,
            "maxWidth": "44px",
          }
        }
      />
    </picture>
  </div>
</div>
`;

exports[`Storyshots Atoms/Avatar Sizes 1`] = `
<div
  style={
    Object {
      "alignItems": "flex-start",
      "display": "flex",
      "flexDirection": "column",
      "flexWrap": "wrap",
      "gap": "10px 30px",
      "height": "100%",
      "justifyContent": "flex-start",
      "maxHeight": "auto",
    }
  }
>
  <div
    className="avatar"
  >
    <picture
      className="picture is-rounded"
    >
      <img
        src="https://placeimg.com/200/200/any"
        style={
          Object {
            "height": 22,
            "maxWidth": "22px",
          }
        }
      />
    </picture>
  </div>
  <div
    className="avatar"
  >
    <picture
      className="picture is-rounded"
    >
      <img
        src="https://placeimg.com/200/200/any"
        style={
          Object {
            "height": 44,
            "maxWidth": "44px",
          }
        }
      />
    </picture>
  </div>
  <div
    className="avatar"
  >
    <picture
      className="picture is-rounded"
    >
      <img
        src="https://placeimg.com/200/200/any"
        style={
          Object {
            "height": 66,
            "maxWidth": "66px",
          }
        }
      />
    </picture>
  </div>
</div>
`;
